OpenAI API was added

--- a/FlickFrenzyBot Web App/appsettings.json
+++ b/FlickFrenzyBot Web App/appsettings.json
@@ -11,6 +11,9 @@
     "ApiUrl": "http://www.omdbapi.com/",
     "ApiKey": "d90dd645"
   },
+  "ApenAIApi": {
+    "ApiKey": "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"
+  },
   "Urls": {
     "BadUrl": "https://static.vecteezy.com/system/resources/previews/007/459/267/large_2x/set-of-cinema-icons-movie-design-elements-with-a-cartoon-concept-illustration-free-vector.jpg"
   },
