--- a/FlickFrenzyBot Web App/appsettings.json
+++ b/FlickFrenzyBot Web App/appsettings.json
@@ -18,7 +18,7 @@
     "BadUrl": "https://static.vecteezy.com/system/resources/previews/007/459/267/large_2x/set-of-cinema-icons-movie-design-elements-with-a-cartoon-concept-illustration-free-vector.jpg"
   },
   "Messages": {
-    "WelcomeMessage": "Hello! I'm here to help you find movie information. Just enter the name of the movie in English and I will find the relevant information for you. Thanks to this, you will be able to learn about the plot description, cast, director and other details.\r\n\r\nWhen I find the movie, you'll have a chance to rate it. Just click on the \"Like\" or \"Dislike\" button to express your opinion. In this way, you will be able to help other users get an idea about the quality of the movie.\r\n\r\nAnd to get additional functionality, pay attention to the buttons in the menu that opens. There you will find many interesting opportunities for further interaction. Feel free to use them to enjoy all the possibilities I can offer you.\r\n\r\nI'm ready to get started and help you find the best movies. Just enter the name of the movie and we will start our search journey together!",
+    "WelcomeMessage": "Hello! This bot can show you information about movies. Just send the movie's name, and the bot will display details about it. \n\nYou can also use the /keyboard command to access five buttons: \n/detailed, \n/plot, \n/filmmakers, \n/general, \n/awards. \nEach button provides different information about the movie. \n\nAdditionally, you can score films with like or dislike to express your opinion. Enjoy exploring movies with the bot!",
     "NoSuchMovieMessage": "Sorry, but I have no such a movie in my database ("
   },
   "ConnectionStrings": {
